2004-12-29  Philippe Gerum  <rpm@localhost>

	* nucleus/fusion.c: Add missing checks for XNBREAK and return
	-EINTR appropriately.

	* nucleus/shadow.c (xnshadow_wait_barrier): Use spinlock.

2004-12-28  Philippe Gerum  <rpm@xenomai.org>

	* include/nucleus/syscall.h: Gather all arch-independent
	definitions for syscall support in a single place.

	* nucleus/module.c (__get_thread_timeout): Attempt to return
	non-zero resource timeouts, even if XNPEND is not set.

	* nucleus/fusion.c (__pthread_activate_vm): Fix startup protocol.

2004-12-27  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* nucleus/timer.c, include/nucleus/timer.h (xntimer_set_sched):
	Only define xntimer_set_sched for SMP.

2004-12-27  Philippe Gerum  <rpm@xenomai.org>

	* include/nucleus/asm-uvm/system.h (xnarch_read_environ): Fix
	crash.
	
	* nucleus/shadow.c: Rewrite the whole hardening migration
	path. This solves the long-suffered "bad: scheduling while atomic"
	issue, both in UP and SMP configs. For this, we basically use a
	wait queue between the gatekeeper and xnshadow_harden(), so that
	synchronous wakeups of the former can be performed right after the
	latter went aslept, and _never_ before due to preemption
	artefacts.

2004-12-26  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/shadow.c (xnshadow_substitute_syscall): Fix
	__NR_getitimer.

2004-12-27  Philippe Gerum  <rpm@localhost>

	* nucleus/shadow.c (xnshadow_substitute_syscall): Discard useless
	migration flag; in any case, we know that we should migrate
	each time xnpod_shadow_p() is false.

2004-12-25  Philippe Gerum  <rpm@localhost>

	* nucleus/fusion.c (__pthread_start_timer_rt): Fix return code.

2004-12-24  Philippe Gerum  <rpm@xenomai.org>

	* include/nucleus/types.h: Define ROOT_THREAD_INIT/EXIT for use in
	context-agnostic (kernel/uvm) apps.

	* fusion: __xeno_*_* -> __fusion_*_*.

	* include/nucleus/GNUmakefile.am: Optionally recurse into asm-uvm/
	during installation.
