@@ -5,6 +5,9 @@
 
 	* nucleus/shadow.c (xnshadow_wait_barrier): Use spinlock.
 
+	* arch/i386/hal/hal.c (__rthal_init): Add sanity check for
+	hw-disabled APIC.
+
 2004-12-28  Philippe Gerum  <rpm@xenomai.org>
 
 	* include/nucleus/syscall.h: Gather all arch-independent
